# homi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .wskignore  AGENTS.md  Dockerfile  README.md  SETUP.md  homi.config.json  local_server.py  project.yml  pyproject.toml  requirements.txt
.deployed/: versions.json
.github/workflows/: main.yml
src/homi/: __init__.py  config.py  homi.py
tests/: conftest.py  test_homi_cli_args.py  test_homi_oneshot.py  test_homi_output_format.py
