[project]
name = "homiaibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.112,<0.113",
    "httpx>=0.27,<0.28",
    "openai>=1.35.0,<2.0.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.30,<0.31",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
]
