[project]
name = "homi"
version = "0.1.0"
description = "A Strands-powered chat agent with a Textual terminal interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents-tools>=0.2.21",
    "strands-agents[ollama]>=1.27.0",
    "textual>=8.0.0",
]

[project.scripts]
homi = "homi.homi:main"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.isort]
profile = "black"

[tool.uv]
package = true
